--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -8,6 +8,7 @@
 actor: FunctionalTester
 modules:
     enabled:
-        # add a framework module here
+        enabled:
+        - CodeIgniter
         - \Helper\Functional
     step_decorators: ~        
